# smartrag

./: .gitignore  README.md  llm.py  models.py  prompt.py  pyproject.toml  qa_ambiguous_with_top10.csv  qa_ambiguous_with_top10_mlm.csv  strategy_example.json  utils.py
data/: ambigqa_unfiltered.csv  ambiguous_qa_generated_top10+DOMAIN+Intent+Dtype+MLM+TE+LLM+eval.csv  ambiguous_qa_generated_top10+DOMAIN+Intent+Dtype+MLM+TE+LLM.csv  ambiguous_qa_generated_top10+DOMAIN+Intent+Dtype.csv  boolq_unfiltered+DOMAIN+Intent+Dtype+eval.csv  boolq_unfiltered+DOMAIN+Intent+Dtype.csv  generated_ambiguous.csv  generated_ambiguous_top10+DOMAIN+LLM+Intent+MLM+TE+LLM+eval.csv  generated_ambiguous_top10+DOMAIN+LLM+Intent+MLM+TE+LLM.csv  generated_ambiguous_top10+DOMAIN+LLM+Intent.csv  generated_ambiguous_top10+LLM+Intent+MLM+TE+LLM+eval.csv  generated_ambiguous_top10+LLM+Intent.csv  medquad_ambiguous.csv  medquad_ambiguous_p2.csv  medquad_unfiltered_DOMAIN+Intent+eval.csv  medquad_unfiltered_DOMAIN+Intent.csv  squad_unfiltered.csv  strategyqa_unfiltered+DOMAIN+Intent+eval.csv  strategyqa_unfiltered+DOMAIN+Intent.csv  triviaqa_unfiltered.csv
disambiguation_methods/: ambiguity_extractor.py  api_suggestion.py  domain_extractor.py  dtype_extractor.py  embedding_similarity.py  generate_abbreviations.py  intent_extractor.py  llm_selector.py  llm_suggestion.py  mlm_likelihood.py  qa.py  score.py  score_2.py
notebooks/: Ambiguous_Dataset_Preprocess_Generation.ipynb  Disambiguation_Methods_Processing.ipynb  Query_Understanding_Abbreviation_Extraction_and_Resolution_via_LLM.ipynb  (+3 more)
(+32 files in other folders)
