[tool.poetry]
name = "smartrag"
version = "0.1.0"
description = "Towards Smarter and Context-Aware Retrieval Augmented Generation with LLMs"
authors = ["Burak Ömür"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.13"
wandb = "^0.16.5"
langchain-openai = "^0.1.1"
pydantic = "^2.6.4"
transformers = "^4.39.2"
torch = "^2.2.2"
numpy = "^1.26.4"
pandas = "^2.2.1"
poetry = "^1.8.2"
jupyter = "^1.0.0"
ruff = "^0.3.4"
datasets = "^2.18.0"

[tool.ruff]
exclude = [".venv"]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
